# GDP-Arduino

./: .gitignore  CMakeLists.txt  FMEA.xlsx  Load Analysis.xlsx  README.md  pseudocode_v1.txt  pseudocode_v3.txt
Code_Modules/: CMakeLists.txt  toggling_code.ino
Code_Modules/L3GD20H/: L3GD20H.ino
Code_Modules/MMA8451/: MMA8451.ino
Code_Modules/control_flight_augmentation/: CMakeLists.txt
Code_Modules/control_flight_augmentation/control/: CMakeLists.txt  PID_controller.cpp  PID_controller.h  safety_checks.cpp
Code_Modules/control_flight_augmentation/control/control_loops/: CMakeLists.txt  control_loop_full_longitudinal_model.cpp  control_loop_spo_model.cpp
Code_Modules/control_flight_augmentation/main/: CMakeLists.txt  control.cpp  control.h
Code_Modules/control_flight_augmentation/state_space_equations/: CMakeLists.txt
Code_Modules/control_flight_augmentation/state_space_equations/numerical_ode_solvers/: CMakeLists.txt  backward_euler_analytic.h  backward_euler_newton.cpp  backward_euler_newton.h  runge_kutta.h
Code_Modules/control_flight_augmentation/util/: CMakeLists.txt  file_io.cpp  file_io.h
Code_Modules/pressure_sensing_MPX5050DP/: pressure_sensing_MPX5050DP.ino
Code_Modules/toggling_code/: toggling_code.ino
Control_Model_Testing/: CMakeLists.txt  Control_Model.cpp  Control_Model_Data_Plotting.py  sim_settings.txt  test_data_aircraft_inputs.txt  test_data_full_model.txt  test_data_spo_model.txt
Control_Model_Testing/aircraft_data/: target_state_matrices.txt
Control_Model_Testing/aircraft_data_scout_modified_cg/: scout_state_matrices.txt  target_state_matrices.txt
Control_Model_Testing/source/: CMakeLists.txt  Control_Model.cpp  Control_Model.h  sim_runner.cpp  sim_runner.h
Control_Model_Testing/source/control/: Control_Model.cpp  Control_Model.h  PID_controller.cpp  PID_controller.h  control_loop.cpp  control_loop.h  elevator_saturation.cpp  elevator_saturation.h  safety_checks.h
Control_Model_Testing/source/control/control_loops/: control_loop_full_longitudinal_model.h  control_loop_spo_model.h
Control_Model_Testing/source/control_loop/: control_loop.cpp  control_loop.h
Control_Model_Testing/source/control_model/: Control_Model.cpp  Control_Model.h
Control_Model_Testing/source/controller/: PID_controller.cpp
Control_Model_Testing/source/main/: control.cpp  control.h
Control_Model_Testing/source/sim/: sim.cpp  sim.h  sim_init.cpp  sim_init.h  sim_init_full_logitudinal_model.cpp  sim_init_full_longitudinal_model.h  sim_runner.cpp  sim_runner.h
Control_Model_Testing/source/state_space_equations/: numerical_ode_solvers.cpp  numerical_ode_solvers.h  state_space_equation.cpp  state_space_equation.h
Control_Model_Testing/source/state_space_equations/numerical_ode_solvers/: backward_euler_analytic.cpp  backward_euler_analytic.h  backward_euler_newton.h  forward_euler.cpp  forward_euler.h  runge_kutta.cpp  runge_kutta.h
Control_Model_Testing/source/util/: file_io.cpp  file_io.h  memory_management.cpp  memory_management.h
Control_Model_Testing/test/: numerical_methods_test.py  numerical_methods_test_with_state_space_matrices.py  test_read.cpp
Control_Model_Testing/test/backwards_euler_derivation/: backwards_euler_derivation.fdb_latexmk  backwards_euler_derivation.fls  backwards_euler_derivation.tex
Control_Model_Testing/test/backwards_euler_newton_derivation/: backwards_euler_newton_derivation.fdb_latexmk  backwards_euler_newton_derivation.fls  backwards_euler_newton_derivation.tex
Force_Feedback_Testing/: DC_motor_model.slxc  Version_5_simulink.slx.autosave  Version_5_simulink_DataFile.m  Version_5_simulink_DataFile1.m  Version_5_simulink_model.slxc
Force_Feedback_Testing/Mechanism/: Feedback Mechanism.SLDASM
Force_Feedback_Testing/dc_motor_state-space_derivation/: dc_motor_state_space_derivation.aux  dc_motor_state_space_derivation.fdb_latexmk  dc_motor_state_space_derivation.fls  dc_motor_state_space_derivation.tex
Force_Feedback_Testing/dc_motor_state-space_derivation/current_measure_schematic/: current_measure_schematic.tex
Force_Feedback_Testing/dc_motor_state-space_derivation/motor_schematic/: motor_schematic.tex
Force_Feedback_Testing/dc_motor_state-space_derivation/rc_network_schematic/: rc_network_schematic.tex
Force_Feedback_Testing/simulink-model/: DC_motor_model.slxc  force_feedback_model.slx  force_feedback_model.slxc  force_feedback_model_init.asv  force_feedback_model_init.m  rc_filter_test.slxc  rc_filter_test_model_init.m  simscape_servo_model.slx
Force_Feedback_Testing/simulink-model/DC_motor_test/: DC_motor_model.slx  DC_motor_model.slxc  DC_motor_model_init.m
Force_Feedback_Testing/simulink-model/control_stick_mechanism/: AileronStub_Default_sldprt.STEP  BearingMount Bottom_Default_sldprt.STEP  BearingMount_Default_sldprt.STEP  BearingPivot_Default_sldprt.STEP  Bottom Triangle_Default_sldprt.STEP  DA 30_Servo Arm_04.STEP_Default_sldprt.STEP  Diagonal Front Servo Attachment Mirrored_Default_sldprt.STEP  Diagonal Front Servo Attachment_Default_sldprt.STEP  Floor_Default_sldprt.STEP  (+19 more)
Mechanism/: Sub-Assembly-1.SLDASM  WDS852-410.sldasm
Pseudocode/: control_loop_pseudocode.txt  pseudocode_v1.txt  pseudocode_v2.txt
Tests/: CMakeLists.txt
Tests/Arduino_Serial_Testing/: arduino_serial_test.py
Tests/Arduino_Serial_Testing/arduino_serial_test_LED.ino/: CMakeLists.txt  generic-gcc-avr.cmake
Tests/Arduino_Serial_Testing/arduino_serial_test_LED.ino/source/: arduino_serial_test_LED.cpp
Tests/Arduino_Serial_Testing/arduino_serial_test_LED.ino/source/arduino_serial_test_LED.ino/: arduino_serial_test_LED.ino.ino
Tests/Control_Model_Testing/: Control_Model_Data_Plotting.py  sim_settings.txt  test_data_full_model.txt  test_data_spo_model.txt
Tests/Control_Model_Testing/source/: CMakeLists.txt
Tests/Control_Model_Testing/source/main/: CMakeLists.txt  control.h
Tests/Control_Model_Testing/source/sim/: CMakeLists.txt  sim.h
Tests/Control_Model_Testing/source/util/: CMakeLists.txt  file_io.cpp  memory_management.cpp
Tests/MATLAB_Serial_Testing/: serial_test.slx  serial_test_init.m
(+25 files in other folders)
